# linear_algebra

./: .gitignore  CMakeLists.txt  README.md  vectorOperations.cpp
matrix/: matrixMultiplication.cpp  matrixOperatorOverloading.cpp
matrix_eigen/: matrixTranspose.cpp
rotations/: basic.cpp
src/: eigenDemo.cpp  tensorDemo.cpp  vectorOperations.cpp  vectorXdOperations.cpp
statistics/: standard_deviation.cpp  standard_deviation_stl.cpp
